# lbm-poc

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: _agent-claude.yml  _agents.yml  _ci-hooks.yml  _comments.yml  _deploy-fly.yml  _dispatch.yml  _test.yml  ci.yml  lbm-comments.yml
cli/: main.py
cli/templates/: AGENTS.md.j2  lbm-agents.yml.j2  lbm-ci-hooks.yml.j2  lbm-comments.yml.j2  lbm-dispatch.yml.j2  lbm.toml.j2
docs/superpowers/plans/: 2026-04-22-ralph-loop.md  2026-04-23-lbm-hub-phase1.md  2026-05-06-deploy-preview-plugin.md  2026-07-09-lbm-plan-step.md  2026-07-09-lbm-repair-comment-trigger.md
docs/superpowers/specs/: 2026-04-22-ralph-loop-design.md  2026-06-24-lbm-repair-comment-trigger-design.md  2026-07-09-lbm-plan-prototype-iteration-design.md  2026-07-09-lbm-plan-step-design.md
scripts/: agent_ops.py  config_parser.py  gen-templates.mjs  models.py
src/: index.ts  jinja.ts  render.ts
templates/: AGENTS.md.j2  lbm-agents.yml.j2  lbm-ci-hooks.yml.j2  lbm-dispatch.yml.j2  lbm.toml.j2  metron-agents.yml.j2  metron-ci-hooks.yml.j2  metron-comments.yml.j2  metron-dispatch.yml.j2  metron.toml.j2
test/: conftest.py  equivalence.test.mjs  test_agent_ops.py  test_config_parser.py  test_models.py  test_plan_step.py  test_repair_triggers.py
